--- a/assets/stylesheet/ui.css
+++ b/assets/stylesheet/ui.css
@@ -5,6 +5,13 @@ body {
 	box-sizing: border-box;
 }
 
+/***************************
+============================
+
+Layers
+
+============================
+***************************/
 .layer {
 	position: absolute;
 	
@@ -22,12 +29,30 @@ body {
 
 }
 
+/***************************
+============================
+
+timer's aside
+
+============================
+***************************/
+
 #three aside {
 	border: 1px solid red;
 	float: right;
 	width: 15vw;
 	height: 100vh;
 }
+
+
+/***************************
+============================
+
+layer 2
+
+============================
+***************************/
+
 
 #two header {
 	height: 23vh;
@@ -41,6 +66,14 @@ body {
 #two section {
 	height: 57vh;
 }
+
+/***************************
+============================
+
+header
+
+============================
+***************************/
 
 #two .heading {
 	
@@ -95,6 +128,37 @@ body {
 	color: #aaa;
 }
 
+/***************************
+============================
+
+main content
+
+============================
+***************************/
+
+#two section{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	overflow: hidden;
+}
+
+#two .main-content{
+	height: 80%;
+	width: 110%;
+	
+	transform: rotate(1deg) translateX(-10px);
+	background-color: rgba(0,0,0,.2);
+}
+
+/***************************
+============================
+
+footer
+
+============================
+***************************/
+
 #two footer {
 	display: flex;
 	flex-direction: column;
@@ -110,6 +174,7 @@ body {
 	margin-left: 60px;
 	position: relative;
 	text-align: center;
+	cursor:pointer;
 }
 
 #two .button:after {
@@ -140,6 +205,7 @@ body {
 /*	border: 1px solid #fff;*/
 	height: 40px;
 	border-radius: 6px;
+	cursor:pointer;
 }
 
 #two .social_media_icons{
@@ -168,8 +234,15 @@ body {
 	border-radius: 6px;
 }
 
-@media only screen and (max-width:900px){
 
+@media only screen and (max-width:900px){
+	/***************************
+	============================
+
+	toggle nav
+
+	============================
+	***************************/
 	
 	#two label {
 		display: block;
