--- a/timer/css/timer.css
+++ b/timer/css/timer.css
@@ -32,23 +32,25 @@ div#timer {
   animation: spin 2s cubic-bezier(.65,.29,.65,1.25);
 }
 .assembly .face {
-  outline: 1px solid #000;
-  background: #fff !important;
+  /*outline: 1px solid #000;*/
+  background: transparent !important;
   backface-visibility: visible;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 .assembly .face span {
-  transform: rotate(-90deg);
-  width: 10px;
-  height: 70px;
-  background: #000;
+  transform: rotate(-90deg) scale(0.25);
+  transform-origin: center;
+  width: calc(4 * 7px);
+  height: calc(4 * 70px);
+  background: #FFF;
 }
 .assembly .face label {
-  transform: rotate(-90deg);
-  color: #000;
-  font-size: 25px;
+  transform: rotate(-90deg) scale(0.25);
+  transform-origin: center;
+  color: #FFF;
+  font-size: calc(4 * 1.8rem);
 }
 @keyframes spin {
   to {
