--- a/assets/stylesheet/ui.css
+++ b/assets/stylesheet/ui.css
@@ -233,6 +233,9 @@ footer
 	width: 0px;
 	height: 0px;
 	border: 15px solid rgba(255,255,255,0.3);
+	transform: rotate(45deg);
+	border-top-color: transparent;
+	border-right-color: transparent;
 	border-radius: 50%;
 	position: absolute;
 	content:'';
@@ -259,12 +262,16 @@ footer
 #two .button span{
 	margin-top: 1px;
 	position: absolute;
-	border: 1px solid #fff;
-	background-color: #fff;
+	/*border: 1px solid #fff;*/
+	/*background-color: #fff;*/
 	left: -14px;
 	border-radius: 50%;
-	padding: 1px;
+	padding: 2px;
 	width: 24px;
+	height: 24px;
+}
+
+#two .button span img{
 	height: 24px;
 }
 
