--- a/assets/stylesheet/ui.css
+++ b/assets/stylesheet/ui.css
@@ -120,7 +120,7 @@ header
 	padding: 10px;
 	text-align: center;
 	border-bottom: 1px solid transparent;
-	transition: all .5s linear ;
+	transition: all .3s linear ;
 }
 
 #two nav li:hover{
@@ -173,7 +173,7 @@ main content
 	width: 400px;
 	height: 150px;
 	margin: 0 auto;
-	
+	cursor: pointer;
 }
 
 #two .main-content span{
@@ -212,9 +212,6 @@ footer
 	cursor:pointer;
 }
  
- #two footer .button{
-
- }
 
 
 #two .button:after {
@@ -249,6 +246,11 @@ footer
 	height: 40px;
 	border-radius: 6px;
 	cursor:pointer;
+
+}
+
+#two .icon img{
+	transition: all .3s linear;
 }
 
 #two .social_media_icons{
@@ -262,13 +264,13 @@ footer
 #two .button span{
 	margin-top: 1px;
 	position: absolute;
-	/*border: 1px solid #fff;*/
-	/*background-color: #fff;*/
+	transition: all .3s linear;
 	left: -14px;
 	border-radius: 50%;
 	padding: 2px;
 	width: 24px;
 	height: 24px;
+
 }
 
 #two .button span img{
@@ -301,19 +303,21 @@ footer
 		display: block;
 		position: relative;
 		top: 10px;
-		left: 20px;
-		width: 40px;
+		left: 10px;
+		width: 20px;
 		padding: 10px;
 		text-align: center;
-		transition: all 1s linear;
-		border-radius: 6px;
+		transition: all .3s linear;
+		border-radius: 3px;
 		cursor: pointer;
+		border: 1px solid #aaa;
+		color: #eee;
 	}
 
 	#two label:hover {
-		background: rgba(255,255,255,.3);
+		background: rgba(255,255,255,.4);
 		color: #ddd;
-
+		border: 1px solid #777;
 	}
 
 	
@@ -329,13 +333,35 @@ footer
 		z-index: 1;
 		top: 10px;
 		transition: all 1s linear;
+		
 	}	
+	
 
 	#two nav li{
-		font-size: 20px;
+		font-size: 18px;
 		padding: 5px 0;
+		width: 120px;
 		text-align: left;
 		display: block;
+		
+		margin-left:10px;
+		transform: translateX(-120px);
+	}
+
+	#two input:checked ~ nav li{
+		transform: translateX(0);
+	}
+
+	#two nav li:first-of-type{
+		transition: transform .3s ease-in;
+	}
+
+	#two nav li:nth-of-type(2){
+		transition: transform .6s ease-in;
+	}
+
+	#two nav li:last-of-type{
+		transition: transform .9s ease-in;
 	}
 
 	#two header{
@@ -365,6 +391,7 @@ footer
 		transform: translateY(2px);
 		background: rgba(255,255,255,.1);
 		color: #ddd;
+		border: 1px solid #777;
 	}
 
 	#two input:checked ~ nav{
@@ -387,6 +414,15 @@ footer
 		margin: 0 auto;
 	}
 
+}
+
+
+@media only screen and (max-width: 400px){
+	#two .text{
+		width: 250px;
+		font-size: 70px;
+		
+	}
 }
 
 
