small glich fix

--- a/assets/stylesheet/ui.css
+++ b/assets/stylesheet/ui.css
@@ -222,6 +222,10 @@ main content
 	animation: tranforming-text 0.6s linear;
 }
 
+#two .texts li{
+	display: none;
+}
+
 
 /***************************
 ============================
