--- a/popups/popup.css
+++ b/popups/popup.css
@@ -33,11 +33,23 @@ li{
 		transform:scaleX(0) rotateZ(90deg);
 	}
 	100%{
+
 		transform: scaleX(1) rotateZ(0deg);
 	}
 }
+@keyframes open2{
+	0%{
+		transform: rotateY(180deg) scaleY(0);
+	}
+	50%{
+		transform: rotateY(180deg) scaleY(1);
+	}
+	100%{
+		transform: rotateY(0deg);
+	}
+} 		
 .animation{
-	animation: open 0.7s linear 0s;
+	animation: open2 0.7s linear 0s;
 }
 .popup{
 	z-index: 2;
@@ -61,6 +73,7 @@ li{
 	justify-content: center;
 	align-items: center;
 	width: 28%;
+	min-width: 152px;
 	z-index: 2;
 	height: 13%;
 	transform: skewX(-15deg);
@@ -113,21 +126,25 @@ li{
 }
 .triangle.down{
 	position: relative;
-	top: 27.5%;
-	right: 3%;
+	top: -47%;
+	right: -34%;
 	transform: rotateZ(-135deg);
 	z-index: 1;
 }
 .cards-list{
 	width: 80%;
-	overflow-x: scroll;		
-	scroll-behavior: 
+	overflow-x: scroll;	
+	-webkit-scroll-snap-type: mandatory;
+    -webkit-scroll-snap-points-x: repeat(100%);
 	margin-left: 0%;
 	margin-top: 10%;
 	margin-right: 10%;
 	list-style-type: none;
 	height: 65%;
 	transform: skewX(8deg);
+}
+.card-list.back p{
+		display: none;
 }
 .cards-list li{
 	min-width: 180px;
@@ -142,4 +159,78 @@ li{
 }
 .purple .cards-list li{
 	background-color: #d68fd6;
+}
+@media screen and (max-width : 1200px) {
+	.popup .ribbon{
+		width: 30%;
+	}
+	.popup .ribbon p{
+		font-size: 130%;
+	}
+	.cards-list{
+		width: 75%;
+		height: 60%;
+		margin-top: 15%;
+	}
+	.cards-list li{
+		min-width: 170px;
+	}
+}
+@media screen and (max-width : 1036px) {
+	
+}
+@media screen and (max-width : 979px) {
+	body,html{
+		font-size:15px; 
+	}	
+	.cards-list{
+		width: 70%;
+		height: 55%;
+	}
+	.cards-list li{
+		min-width: 160px;
+	}
+	.down-ribbon{
+		left: 65%;
+	}
+}
+
+@media screen and (max-width : 823px) {
+	body,html{
+		font-size: 14px;
+	}
+}
+
+@media screen and (max-width : 480px) {
+	body,html{
+		font-size: 13px;
+	}
+	.popup{
+		display: flex;
+		flex-direction: column;
+	}
+	.popup .ribbon{
+		width: 100%;
+		transform: skewX(0deg);
+		z-index: 5;
+		position: relative;
+		top: 0;
+		left: 0;
+	}
+	.cards-list{
+		m/*argin-left: 5%;*/
+		width: 80%;
+		height: 70%;
+		margin-top: 10%;
+	}
+	.popup .ribbon p,.popup .content p,.popup .content,.cards-list li,.cards-list{
+			transform: skewX(0deg);
+	}
+
+}
+
+@media screen and (max-width : 320px) {
+	body,html{
+		font-size: 12px;
+	}
 }
