--- a/assets/stylesheet/image-trans.css
+++ b/assets/stylesheet/image-trans.css
@@ -1,38 +1,62 @@
 @keyframes slidy {
-0% { 
+0% {
 	left: 0%; }
-30% { 
+30% {
 	left: 0%; }
-35% { 
+35% {
 	left: -100%; }
-60% { 
+60% {
 	left: -100%; }
-65% { 
+65% {
 	left: -200%; }
-95% { 
+95% {
 	left: -200%; }
 100%{
 	left:-300%;
 }
 }
 
-body { margin: 0; } 
-div#slider { overflow: hidden; 
+body { margin: 0; }
+div#slider { overflow: hidden;
 	z-index: 0;
 height: 100vh;}
-div#slider figure div{ width: 25%; float: left; 
+div#slider figure > div{ width: 25%; float: left;
 background-position: center;
 background-repeat: no-repeat;
 background-size: cover;
 height: 100vh;}
-div#slider figure { 
+div#slider figure {
   position: relative;
   width: 400%;
   margin: 0;
   left: 0;
   text-align: left;
   font-size: 0;
-  animation: 20s slidy infinite forwards; 
+}
+div#slider figure.active {
+	animation: 18s slidy infinite forwards;
+}
+.imgwrap::after{
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	background-color: #EF3340;
+	opacity: 0.56;
+}
+.imgwrap:nth-of-type(2)::after{
+	left: 100vw;
+	background-color: #00FED3;
+}
+.imgwrap:nth-of-type(3)::after{
+	left: 200vw;
+	background-color: #D68FD6;
+}
+.imgwrap:nth-of-type(4)::after{
+	left: 300vw;
+	background-color: #EF3340;
 }
 /*test 1*/
 .clr{position: absolute;
@@ -42,28 +66,3 @@ div#slider figure {
 	overflow: hidden;
 	height:100vh;
 }
-@keyframes color-meter {
-0% { 
-	top: 0%; }
-30% { 
-	top: 0%; }
-35% { 
-	top: -100%; }
-60% { 
-	top: -100%; }
-65% { 
-	top: -200%; }
-95% { 
-	top: -200%; }
-100%{
-	top:-300%;
-}
-					}
-.clr > div {
-	position: relative;
-	height: 300%;
-	margin:0px;
-	top:0px;
-	animation: color-meter 20s infinite;
-}
-
