--- a/assets/stylesheet/ui.css
+++ b/assets/stylesheet/ui.css
@@ -1,10 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Oswald:400,700');
-
 body {
 	background-color: #009688;
 	color: #fff;
 	font: 20px/22px 'Oswald',sans-serif;
 	box-sizing: border-box;
+	overflow: hidden;
 }
 
 /***************************
@@ -44,6 +43,12 @@ timer's aside
 	display: flex;
 	flex-direction: column;
 	margin-bottom: 10px;
+	position: absolute;
+	bottom: 20px;
+}
+
+.footer-inwrap * {
+	position: relative;
 }
 
 footer .buttons {
@@ -613,12 +618,12 @@ youtube video
 	display: none;
 	flex-direction: column;
 	justify-content: center;
+	align-items: center;
 	position: fixed;
 	background: rgba(0,0,0,.7);
 	width: 100vw;
 	top: 0;
 	bottom: 0;
-
 }
 
 
