--- a/assets/stylesheet/ui.css
+++ b/assets/stylesheet/ui.css
@@ -144,7 +144,7 @@ header
 	display: inline-block;
 	height: 100%;
 	font-size: 20pt;
-	width: 140px;
+	padding: 30px 10px;
 	text-transform: uppercase;
 	margin-left: 40px;
 	cursor: pointer;
@@ -158,6 +158,7 @@ header
 	transition: border-bottom-color 0.5s;
 	border-bottom: 3px solid transparent;
 	padding-bottom: 7px;
+	white-space: nowrap;
 }
 
 #two nav li:hover a{
@@ -218,12 +219,14 @@ main content
 }
 
 #two .box{
-	border: 1px solid white;
+	//border: 1px solid white;
+	background: url(../../resources/box.png) no-repeat;
+	background-position: center bottom;
+	background-size: contain;
 	width: 250px;
-	height: auto;
-	margin-left: 15.9em;
+	height: 245px;
+	margin-left: 15.7em;
 	position: absolute;
-	height: 230px;
 	animation: frame-moved 1s linear;
 }
 
