--- a/assets/stylesheet/ui.css
+++ b/assets/stylesheet/ui.css
@@ -631,6 +631,13 @@ youtube video
 
 
 .youtube-video-container{
-	border: 1px solid #fff;
 	margin: 0 auto;
+	width: 70vw;
+	height: 70vh;
+}
+
+.youtube-video-container iframe{
+	margin: 0 auto;
+	width: 100%;
+	height: 100%;
 }
